--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "DEC 2022 - HW 2",
   "main": "src/app.ts",
   "scripts": {
-    "start": "rimraf dist && tsc-watch --onSuccess \"npm run watch\"",
+    "start": "rimraf dist && tsc-watch",
     "watch": "nodemon \"src/app.ts\" --watch \"./src\""
   },
   "author": "",
@@ -12,11 +12,9 @@
   "keywords": [],
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
-    "mogoose": "^0.0.1-security",
     "mongoose": "^7.2.2"
   },
   "devDependencies": {
